# LimeSuite_ForAndroid

./: CMakeLists [DESKTOP ONLY].txt  CMakeLists.txt
SoapyLMS7/: CMakeLists.txt  Registration.cpp
src/: CMakeLists.txt  Logger.cpp
src/ConnectionFTDI/: CMakeLists.txt  ConnectionFT601.cpp  ConnectionFT601Entry.cpp
src/ConnectionFX3/: CMakeLists.txt  ConnectionFX3.cpp  ConnectionFX3Entry.cpp
src/ConnectionRegistry/: ConnectionHandle.h  ConnectionRegistry.cpp
src/GFIR/: rounding.c
src/lms7002m_mcu/: MCU_File.cpp
